--- a/timeris/index.html
+++ b/timeris/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/public/clock.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Clock</title>
   </head>
-  <body>
+  <body style="background-color: #202124">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
